2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Don't crash if a
	  command is not found.

2007-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* MonoDevelop.Components.Commands/KeyBindingService.cs: Use the
	cmd.Id as the key instead of cmd.Text.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/Command.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs: Add support for
	  command categories.

2007-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* KeyBindingSchemes.xml: Added

	* MonoDevelop.Components.Commands/CommandManager.cs: Use the new
	KeyBindingManager and connect to the root window's KeyPressEvent
	so that we can manage our own keybindings, bypassing Gtk's limited
	key-binding management.

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: New source
	file which manages key bindings.

	* MonoDevelop.Components.Commands/KeyBindingService.cs: New source
	file that can load alternate key binding schemes and save custom
	configurations.

	* MonoDevelop.Components.Commands/CommandCheckMenuItem.cs
	(Update): Manually pack an accel label into the menu item so that
	we can display Emacs-like key bindings.

	* MonoDevelop.Components.Commands/CommandMenuItem.cs (Update):
	Manually pack an accel label into the menu item so that we can
	display Emacs-like key bindings.

	* MonoDevelop.Components.Commands/Command.cs (set_AccelKey): If
	the new accel is an empty string, set to null (simplifies checks
	using this string). Also emit an event that the accel changed.

	* MonoDevelop.Components.Commands/LocalCommandEntry.cs: Updated to
	not pass a category string to RegisterCommand().

2007-07-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Components.DockToolbars/DockToolbarFrame.cs: Worked on
	  Bugzilla Bug 81349.

2007-07-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.DockToolbars/DockToolbarPanel.cs: When adding